--- a/css/batch-44-1st-semester.css
+++ b/css/batch-44-1st-semester.css
@@ -168,6 +168,7 @@
 
             .subject-title {
                 font-size: 1.2rem;
+                text-align: center;
             }
             
             .exam-option-grid {
