--- a/css/batch-45-1st-semester.css
+++ b/css/batch-45-1st-semester.css
@@ -297,6 +297,7 @@ body {
 
     .subject-title {
         font-size: 1.2rem;
+        text-align: center;
     }
 }
 
